# jarvis

./: .gitignore  CMakeLists.txt  LICENSE.toml++  Makefile  README.md  SHA256SUMS  next-steps.md  pyproject.toml  wakeword.py
blog/: 01-building-a-personalized-wake-word-detector.md  02-improving-discrimination-with-feature-analysis.md  03-deploying-the-winning-configuration.md  04-performance-profiling-and-ggml-mel.md  05-quantization-and-unified-encoder.md  06-client-server-split.md  07-silero-vad-port.md  08-unified-engine-and-pipelines.md  09-ops-architecture.md  10-unix-socket-server.md  11-public-release.md  12-unified-mode-and-detection-improvements.md  13-anchor-weighting-and-false-trigger-investigation.md  14-config-modes-and-recording-tuning.md
jarvis/: __init__.py  ablation.py  dtw.py  enroll.py  features.py  review.py
scripts/: ablation.py  convert_coreml.py  export_silero.py  silero_ref.py
src/: audio_async.cpp  audio_async.hpp  bench.cpp  client.cpp  client.h  config.cpp  config.h  detect.cpp  detect.h  display.cpp  display.h  encode.cpp  jarvis-client.cpp  jarvis.cpp  jarvis.h  main.cpp  net.h  ops.cpp  ops.h  playback.cpp  playback.h  recorder.cpp  recorder.h  server.cpp  server.h  vad.cpp  vad.h  vad_ggml.cpp  vad_ggml.h  vad_test.cpp  weather.cpp  weather.hpp  whisper.cpp  whisper.h
src/coreml/: whisper-encoder.h  whisper-encoder.mm
tools/: test_client.py
wip/: client.h  ops.cpp  server.cpp  weather.cpp  weather.hpp  weather_main.cpp
