[project]
name = "soundtools"
version = "0.4.0"
description = "Personalized wake word detection using Whisper Tiny encoder"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.scripts]
enroll = "jarvis.enroll:main"

[project.optional-dependencies]
dev = [
    "onnx",
    "onnxruntime",
]
coreml = [
    "torch==2.7.0",
    "openai-whisper",
    "coremltools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.uv]
override-dependencies = [
    "tflite-runtime ; python_version > '99'",
]
